--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^6.9.16",
     "sequelize": "^6.37.7",
+    "uuid": "^11.1.0",
     "vite": "^6.3.5"
   },
   "devDependencies": {
